--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "daisyui": "^2.38.1",
     "firebase": "^9.13.0",
     "flowbite": "^1.6.5",
+    "flowbite-datepicker": "^1.2.2",
     "flowbite-react": "^0.4.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
@@ -56,6 +57,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.2"
+    "tailwindcss": "^3.3.2"
   }
 }
