--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "flowbite-react": "^0.4.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-photo-view": "^1.2.2",
